# Veris

./: .gitignore  README.md  SYSTEM_ARCHITECTURE.md  claude.md  deploy.md  faststart.md
.claude/: settings.json
ai-embedding-service/: main.py  requirements.txt  test.py
ai-model/: authnet_clip.pth  main.py  requirements.txt  run.py  test_signals.py
backend/: .env.example  config.py  main.py  models.py  requirements.txt
contracts/: .env.example  .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
device/: capture.py  config.py  keygen.py  requirements.txt  uploader.py
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
hardware-camera-app/: export_key.py  hardware_identity.py  install_dependencies.sh  raspberry_pi_camera_app.py  requirements.txt  run_camera_app.sh  stream_server.py
hardware-web3-service/: .env.example  claimClient.js  dbService.js  deploymentService.js  embeddingService.js  filecoinService.js  getHardwareKey.js  package.json  pdas.js  pnpm-lock.yaml  server.js  solanaService.js  web3Service.js
lensmint-public-server/: server.js
owner-portal/: .env.example  components.json  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.js
solana-program/programs/veris/: Cargo.toml
solana-program/programs/veris/src/: ed25519.rs  errors.rs  events.rs  lib.rs  state.rs
solana-program/programs/veris/src/instructions/: deactivate_device.rs  initialize.rs  mint_edition.rs  mint_photo.rs  mod.rs  register_device.rs  transfer_edition.rs  transfer_photo.rs  update_device.rs
(+109 files in other folders)
